--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,10 +1,5 @@
-/**
-  |============================
-  | include css partials with
-  | default @import url()
-  |============================
-*/
-@import url('./reset.css');
 
+@import url('./reset.css');
+@import url('./gallery.css')
 
 
